--- a/html/1.css
+++ b/html/1.css
@@ -345,8 +345,10 @@ table     	{
 		border-width:1px;
 		border-color:black;
 		padding:5px;
+		margin:20px;
+		top:10px;
 		text-align:left;
-		width:480px;
+		width:600px;
 		}
 
 pre		{
@@ -378,6 +380,18 @@ input		{
 		border-color:#182263;
 		}
 
+input[type=radio]{
+		border-style:none;
+		}
+
+input[type=checkbox]{
+		border-style:none;
+		}
+
+input[type=file]{
+		border-style:none;
+		}
+
 textarea	{
 		font-family:sans-serif;
 		color:#002468;
@@ -399,6 +413,7 @@ select		{
 		}
 
 .avatar 	{
+		margin:20px;
 		max-width:60px;
 		max-height:60px;
 		}
