--- a/html/18.css
+++ b/html/18.css
@@ -1,20 +1,38 @@
 body		{
-		font-family:sans-serif;
-		font-size:12px;
-		text-align:left;
-		color:#002468;
-		background-color:#ffffff;
+
+	font-family : Verdana;	
+	border : none;
+	height : auto;
+	letter-spacing : normal;
+	line-height : normal;
+
+	scrollbar-face-color: #FF6600;
+	scrollbar-highlight-color: #FF9900;
+	scrollbar-shadow-color: #CC3333;
+	scrollbar-arrow-color: #FFFFFF;
+	scrollbar-3d-light-color : #FFCC66;
+	scrollbar-base-color : #FF8C00;
+	scrollbar-dark-shadow-color : #FF6347;
 		}
 
 a		{
 		text-decoration:none;
 		color:#182263;
 		}
+A:Link {
+	text-decoration:none;
+	color : Black;
+}
 
-a:hover		{
-		color:#FFCC00;
-		text-decoration:none;
-		}
+A:Visited {
+	text-decoration: none;
+	font : italic;
+}
+
+A:Hover {
+	color: #CC9900;
+	text-decoration: none
+}
 
 table     	{
 		empty-cells:show;
@@ -39,7 +57,7 @@ table     	{
 		padding-right:5px;
 		padding-top:0px;
 		padding-bottom:0px;
-		margin:0px;
+		margin:2px;
 		border-style:dotted;
 		border-color:#182263;
 		border-width:1px;
@@ -95,22 +113,26 @@ table     	{
 
 #logo		{
 		float:left;
-		background-image:url(../images/logo.png);
+		background-image:url(http://www.meinungsschreiber.net/images/schreiber_effekt.gif);
 		background-repeat:no-repeat;
 		width:150px;
-		height:111px;
+		height:80px;
 		}
 
 #title		{
+background-image:url(http://www.meinungsschreiber.net/images/logo_neu_1.gif);
+		background-repeat:no-repeat;
+		background-position:center;
 		padding-left:250px;
-		padding-top:10px;
-		font-size:16px;
+		padding-top:60px;
+		font-size:14px;
 		font-weight:bold;
+		vertical-align:bottom;
 		}
 
 #welcome	{
 		padding-left:250px;
-		padding-top:20px;
+		padding-top:20px;		
 		font-size:12px;
 		font-weight:bold;
 		}
