--- a/html/18.css
+++ b/html/18.css
@@ -1,38 +1,20 @@
 body		{
-
-	font-family : Verdana;
-	border : none;
-	height : auto;
-	letter-spacing : normal;
-	line-height : normal;
-
-	scrollbar-face-color: #FF6600;
-	scrollbar-highlight-color: #FF9900;
-	scrollbar-shadow-color: #CC3333;
-	scrollbar-arrow-color: #FFFFFF;
-	scrollbar-3d-light-color : #FFCC66;
-	scrollbar-base-color : #FF8C00;
-	scrollbar-dark-shadow-color : #FF6347;
+		font-family:sans-serif;
+		font-size:12px;
+		text-align:left;
+		color:#002468;
+		background-color:#ffffff;
 		}
 
 a		{
 		text-decoration:none;
 		color:#182263;
 		}
-A:Link {
-	text-decoration:none;
-	color : Black;
-}
 
-A:Visited {
-	text-decoration: none;
-	font : italic;
-}
-
-A:Hover {
-	color: #CC9900;
-	text-decoration: none
-}
+a:hover		{
+		color:#FFCC00;
+		text-decoration:none;
+		}
 
 table     	{
 		empty-cells:show;
@@ -57,7 +39,7 @@ table     	{
 		padding-right:5px;
 		padding-top:0px;
 		padding-bottom:0px;
-		margin:2px;
+		margin:0px;
 		border-style:dotted;
 		border-color:#182263;
 		border-width:1px;
@@ -116,11 +98,12 @@ table     	{
 		background-image:url(http://www.meinungsschreiber.net/images/schreiber_effekt.gif);
 		background-repeat:no-repeat;
 		width:150px;
-		height:80px;
+		height:111px;
 		}
+#logo:hover{cursor:pointer;}
 
 #title		{
-background-image:url(http://www.meinungsschreiber.net/images/logo_neu_1.gif);
+		background-image:url(http://www.meinungsschreiber.net/images/logo_neu_1.gif);
 		background-repeat:no-repeat;
 		background-position:center;
 		padding-left:250px;
@@ -379,8 +362,10 @@ background-image:url(http://www.meinungsschreiber.net/images/logo_neu_1.gif);
 		border-width:1px;
 		border-color:black;
 		padding:5px;
+		margin:20px;
+		top:10px;
 		text-align:left;
-		width:480px;
+		width:600px;
 		}
 
 pre		{
@@ -412,6 +397,18 @@ input		{
 		border-color:#182263;
 		}
 
+input[type=radio]{
+		border-style:none;
+		}
+
+input[type=checkbox]{
+		border-style:none;
+		}
+
+input[type=file]{
+		border-style:none;
+		}
+
 textarea	{
 		font-family:sans-serif;
 		color:#002468;
@@ -433,6 +430,7 @@ select		{
 		}
 
 .avatar 	{
+		margin:20px;
 		max-width:60px;
 		max-height:60px;
 		}
