--- a/html/1.css
+++ b/html/1.css
@@ -24,6 +24,18 @@ table     	{
 		margin-right:auto;
 		}
 
+#head	{
+background-image: url("../images/title_back.png");
+background-repeat:no-repeat;
+background-color:#FFCC00;
+height: 70px;
+width:100%;
+position:absolute;
+left:0;
+top:0;
+z-index:0;
+}
+
 .frame		{
 		border-style:solid;
 		border-width:1px;
@@ -94,32 +106,52 @@ table     	{
 		}
 
 #logo		{
-		float:left;
-		background-image:url(../images/logo.png);
-		background-repeat:no-repeat;
-		width:150px;
-		height:111px;
+		padding-top:20px;
+		width: 150px;
+		height: 111px;
+		padding-left:20px;
+		z-index:1;
 		}
+#title-img{
+	position:absolute;
+	padding-top: 15px;
+	left:210px;
+		z-index:1;
+}
+
+#subtitle-img{
+	position:absolute;
+	left: 210px;
+	top:75px;
+		z-index:1;
+}
 #logo:hover{cursor:pointer;}
 
 #title		{
-		padding-left:250px;
-		padding-top:10px;
 		font-size:16px;
 		font-weight:bold;
+		text-align:right;
+		position:absolute;
+		right:20px;
+		top:40px;
+		z-index:2;
 		}
 
 #welcome	{
-		padding-left:250px;
-		padding-top:20px;
 		font-size:12px;
 		font-weight:bold;
+		text-align:right;
+		position:absolute;
+		right:20px;
+		top:10px;
+		z-index:2;
 		}
 
 #menu		{
 		clear:left;
 		text-align:center;
 		margin:10px;
+		padding-top:100px;
 		}
 
 #body		{
