--- a/html/1.css
+++ b/html/1.css
@@ -72,32 +72,60 @@ table     	{
 		color:#182263;
 		}
 
-.new:before	{
-		content:url("../images/new.png");
+.new		{
+		background-image:url("../images/new.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.old:before	{
-		content:url("../images/old.png");
+.old		{
+		background-image:url("../images/old.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.newex:before	{
-		content:url("../images/newex.png");
+.newex		{
+		background-image:url("../images/newex.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.oldex:before	{
-		content:url("../images/oldex.png");
+.oldex		{
+		background-image:url("../images/oldex.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.poll:before	{
-		content:url("../images/poll.png");
+.poll		{
+		background-image:url("../images/poll.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.closed:before	{
-		content:url("../images/locked.png");
+.closed		{
+		background-image:url("../images/locked.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.sticky:before	{
-		content:url("../images/sticky.png");
+.sticky		{
+		background-image:url("../images/sticky.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
 .summary	{
@@ -185,6 +213,7 @@ table     	{
 		vertical-align:middle;
 		padding:0;
 		margin:0;
+		z-index:0;
 		padding-left:60px;
 		padding-top:6px;
 		padding-bottom:6px;
@@ -201,6 +230,7 @@ table     	{
 		}
 
 #foot-logo	{
+		z-index:1;
 		position:absolute;
 		left:10px;
 		bottom:5px;
@@ -364,8 +394,7 @@ table     	{
 		margin-left:15px;
 		}
 
-.newthread:before{
-		content:"neu";
+.newthread{
 		background-color:#FFCC00;
 		color:#182263;
 		font-size:10px;
@@ -375,8 +404,8 @@ table     	{
 		padding-top:0px;
 		padding-bottom:0px;
 		margin-right:10px;
-		border-style:dotted;
-		border-color:#182263;
+		border-style:solid;
+		border-color:#6c83af;
 		border-width:1px;
 		background-image:url("../images/button.png");
 		background-repeat:repeat-x;
