--- a/html/12.css
+++ b/html/12.css
@@ -12,7 +12,7 @@ a		{
 		}
 
 a:hover		{
-		color:#990000;
+		color:#FFCC00;
 		text-decoration:none;
 		}
 
@@ -22,7 +22,6 @@ table     	{
 		border-collapse:collapse;
 		margin-left:auto;
 		margin-right:auto;
-
 		}
 
 .frame		{
@@ -41,88 +40,123 @@ table     	{
 		padding-top:0px;
 		padding-bottom:0px;
 		margin:0px;
-		border-style:dotted;
-		border-color:#182263;
+		border-style:solid;
+		border-color:#6c83af;
 		border-width:1px;
-		background-image:url((../images/button.png);
+		background-image:url("../images/button.png");
 		background-repeat:repeat-x;
 		}
 
 .button:hover	{
-		background-color:#990000;
-		color:#ffffff;
+		background-color:#FFCC00;
+		border-color:#182263;
+		color:#182263;
 		}
 
-.new:before	{
-		content:url(http://www.akainosekaide.de/mangacenter/neu.gif);
+.new		{
+		background-image:url("../images/new.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.old:before	{
-		content:url(http://www.akainosekaide.de/mangacenter/alt2.gif);
+.old		{
+		background-image:url("../images/old.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.newex:before	{
-		content:url(http://www.akainosekaide.de/mangacenter/neu.gif);
+.newex		{
+		background-image:url("../images/newex.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.oldex:before	{
-		content:url(http://www.akainosekaide.de/mangacenter/alt2.gif);
+.oldex		{
+		background-image:url("../images/oldex.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.poll:before	{
-		content:url(../images/poll.png);
+.poll		{
+		background-image:url("../images/poll.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.closed:before	{
-		content:url(../images/locked.png);
+.closed		{
+		background-image:url("../images/locked.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.sticky:before	{
-		content:url(../images/sticky.png);
+.sticky		{
+		background-image:url("../images/sticky.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.summary{
+.summary	{
 		position:absolute;
 		width:300px;
 		overflow:hidden;
 		margin:5px;
 		padding:2px;
-		background-image:url(../images/bg.png);
+		background-image:url("../images/bg.png");
 		background-repeat:repeat-x;
 		background-color:#FFCC00;
 		color:#182263;
 		border:solid 1px #182263;
+		z-index:10;
 		}
 
 #logo		{
-		float:left;
-background-image:url(http://www.laber-land.de/~akai/mangacenter/mclogo.jpg);
+		position:absolute;
+		background-image:url("../images/logo.png");
 		background-repeat:no-repeat;
-		width:0px;
-		height:0px;
+		width:150px;
+		height:111px;
+		z-index:1;
 		}
 
-#title		{
+#logo:hover{cursor:pointer;}
 
+#title		{
+		padding-left:200px;
+		padding-top:10px;
 		font-size:16px;
 		font-weight:bold;
 		}
 
 #welcome	{
-		padding-left:0px;f
+		padding-left:200px;
 		padding-top:20px;
 		font-size:12px;
 		font-weight:bold;
 		}
 
 #menu		{
-		clear:left;
 		text-align:center;
 		margin:10px;
 		}
 
 #body		{
+		margin-top:30px;
 		text-align:center;
+		position:relative;
 		}
 
 #webring	{
@@ -134,7 +168,7 @@ background-image:url(http://www.laber-land.de/~akai/mangacenter/mclogo.jpg);
 		color:#FFFFFF;
 		font-weight:bold;
 		font-size:12px;
-		background-color:#990000;
+		background-color:#6c83af;
 		padding:1px;
 		padding-left:100px;
 		border-color:#182263;
@@ -155,7 +189,7 @@ background-image:url(http://www.laber-land.de/~akai/mangacenter/mclogo.jpg);
 		color:#FFFFFF;
 		font-weight:bold;
 		font-size:10px;
-		background-color:#990000;
+		background-color:#6c83af;
 		padding:1px;
 		}
 
@@ -164,7 +198,7 @@ background-image:url(http://www.laber-land.de/~akai/mangacenter/mclogo.jpg);
 		}
 
 .pathlink:hover	{
-		color:#ffffff;
+		color:#FFCC00;
 		}
 
 .iconcol	{
@@ -232,20 +266,19 @@ background-image:url(http://www.laber-land.de/~akai/mangacenter/mclogo.jpg);
 .title		{
 		color:#ffffff;
 		font-size:12px;
-		background-color:#990000;
+		background-color:#182263;
 		text-align:center;
 		padding-top:2px;
 		padding-bottom:2px;
 		padding-left:8px;
 		padding-right:8px;
-		background-image:url(http://www.laber-land.de/~akai/mangacenter/dings.jpg);
-background-repeat:repeat-x;
-
+		background-image:url("../images/bg.png");
+		background-repeat:repeat-x;
 		}
 
 .pollbar	{
 		font-size:9px;
-		background-color:#990000;
+		background-color:#6c83af;
 		}
 
 .pages		{
@@ -266,8 +299,7 @@ background-repeat:repeat-x;
 		margin-left:15px;
 		}
 
-.newthread:before{
-		content:"neu";
+.newthread{
 		background-color:#FFCC00;
 		color:#182263;
 		font-size:10px;
@@ -277,10 +309,10 @@ background-repeat:repeat-x;
 		padding-top:0px;
 		padding-bottom:0px;
 		margin-right:10px;
-		border-style:dotted;
-		border-color:#182263;
+		border-style:solid;
+		border-color:#6c83af;
 		border-width:1px;
-		background-image:url(../images/button.png);
+		background-image:url("../images/button.png");
 		background-repeat:repeat-x;
 		}
 
@@ -358,8 +390,10 @@ background-repeat:repeat-x;
 		border-width:1px;
 		border-color:black;
 		padding:5px;
+		margin:20px;
+		top:10px;
 		text-align:left;
-		width:480px;
+		width:600px;
 		}
 
 pre		{
@@ -391,6 +425,18 @@ input		{
 		border-color:#182263;
 		}
 
+input[type=radio]{
+		border-style:none;
+		}
+
+input[type=checkbox]{
+		border-style:none;
+		}
+
+input[type=file]{
+		border-style:none;
+		}
+
 textarea	{
 		font-family:sans-serif;
 		color:#002468;
@@ -412,6 +458,7 @@ select		{
 		}
 
 .avatar 	{
+		margin:20px;
 		max-width:60px;
 		max-height:60px;
 		}
