--- a/html/20.css
+++ b/html/20.css
@@ -1,57 +1,66 @@
-body {
-	background: url("http://www.archlinux.de/images/title_back.png") repeat-x top left #fbf8f1;
-	padding: 0px 30px;
-	margin: 0;
-	color: #46494d;
-	font-family: sans-serif;
-	font-size:10px;
-}
+body 		{
+		background: url("http://www.archlinux.de/images/title_back.png") repeat-x top left #fbf8f1;
+		padding: 0px 30px;
+		margin: 0;
+		color: #46494d;
+		font-family: sans-serif;
+		font-size:10px;
+		}
 
-#head_container {top:0; margin: 0; padding: 0;  height: 140px;}
+#head_container {
+		top:0;
+		margin: 0;
+		padding: 0;
+		height: 140px;
+		}
 
-#main_nav ul {
-	list-style: none;
-	margin: 0;
-	padding: 20px;
-	padding-right: 10px;
-	padding-top: 48px;
-}
+#main_nav ul 	{
+		list-style: none;
+		margin: 0;
+		padding: 20px;
+		padding-right: 10px;
+		padding-top: 48px;
+		}
 
 #main_nav ul li {
-	display: block;
-	float: right;
-	width: 67px;
-	height: 20px;
-	margin: 0;
-	padding-top: 2px;
-	margin-left: 3px;
-	background: url("http://www.archlinux.de/images/tab.png") repeat-x bottom left #fbf8f1;
-	text-align: center;
-	font-size: 13px;
-}
+		display: block;
+		float: right;
+		width: 67px;
+		height: 20px;
+		margin: 0;
+		padding-top: 2px;
+		margin-left: 3px;
+		background: url("http://www.archlinux.de/images/tab.png") repeat-x bottom left #fbf8f1;
+		text-align: center;
+		font-size: 13px;
+		}
 
 #main_nav ul li[class~=selected] {
-	background: #fbf8f1;
-}
+		background: #fbf8f1;
+		}
 
 #main_nav ul li a {
-color: #35526f;
-	font-weight: bold;
-	text-decoration: none;
-}
+		color: #35526f;
+		font-weight: bold;
+		text-decoration: none;
+		}
 
+#title		{
+		margin: 0;
+		padding: 0;
+		height: 140px;
+		float: left;
+		}
 
+#logo 		{
+		margin: 0;
+		padding: 0;
+		float: left;
+		width: 140px;
+		height: 140px;
+		}
 
-#title {margin: 0; padding: 0;
-	height: 140px;
-	float: left;
-}
-
-#logo {margin: 0; padding: 0;
-	float: left;
-	width: 140px;
-	height: 140px;
-}
+#logo:hover{cursor:pointer;}
 
 a		{
 		text-decoration:none;
@@ -87,10 +96,10 @@ table     	{
 		padding-top:0px;
 		padding-bottom:0px;
 		margin:0px;
-		border-style:dotted;
-		border-color:#35526f;
+		border-style:solid;
+		border-color:#6D8AA9;
 		border-width:1px;
-		background-image:url(../images/button.png);
+		background-image:url("../images/button.png");
 		background-repeat:repeat-x;
 		text-decoration: none;
 		}
@@ -99,34 +108,63 @@ table     	{
 		background-color:#6D8AA9;
 		color:#FFFFFF;
 		text-decoration: none;
+		border-color:#35526f;
 		}
 
-.new:before	{
-		content:url(http://www.archlinux.de/images/new.png);
+.new		{
+		background-image:url("http://www.archlinux.de/images/new.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.old:before	{
-		content:url(http://www.archlinux.de/images/old.png);
+.old		{
+		background-image:url("http://www.archlinux.de/images/old.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.newex:before	{
-		content:url(http://www.archlinux.de/images/new_ex.png);
+.newex		{
+		background-image:url("http://www.archlinux.de/images/new_ex.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.oldex:before	{
-		content:url(http://www.archlinux.de/images/old_ex.png);
+.oldex		{
+		background-image:url("http://www.archlinux.de/images/old_ex.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.poll:before	{
-		content:url(../images/poll.png);
+.poll		{
+		background-image:url("../images/poll.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.closed:before	{
-		content:url(../images/locked.png);
+.closed		{
+		background-image:url("../images/locked.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.sticky:before	{
-		content:url(../images/sticky.png);
+.sticky		{
+		background-image:url("../images/sticky.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
 .summary{
@@ -135,7 +173,7 @@ table     	{
 		overflow:hidden;
 		margin:5px;
 		padding:2px;
-		background-image:url(../images/bg.png);
+		background-image:url("../images/bg.png");
 		background-repeat:repeat-x;
 		background-color:#35526f;
 		color:#fbf8f1;
@@ -273,7 +311,7 @@ table     	{
 		padding-bottom:2px;
 		padding-left:8px;
 		padding-right:8px;
-		background-image:url(../images/bg.png);
+		background-image:url("../images/bg.png");
 		background-repeat:repeat-x;
 		}
 
@@ -300,8 +338,7 @@ table     	{
 		margin-left:15px;
 		}
 
-.newthread:before{
-		content:"neu";
+.newthread{
 		background-color:#3366CC;
 		color:#FFFFFF;
 		font-size:10px;
@@ -314,7 +351,7 @@ table     	{
 		border-style:dotted;
 		border-color:#35526f;
 		border-width:1px;
-		background-image:url(../images/button.png);
+		background-image:url("../images/button.png");
 		background-repeat:repeat-x;
 		}
 
