--- a/html/default.css
+++ b/html/default.css
@@ -39,95 +39,129 @@ table     	{
 		padding-right:5px;
 		padding-top:0px;
 		padding-bottom:0px;
-		margin:2px;
-		border-style:dotted;
-		border-color:#182263;
+		margin:0px;
+		border-style:solid;
+		border-color:#6c83af;
 		border-width:1px;
-		background-image:url(../images/button.png);
+		background-image:url("../images/button.png");
 		background-repeat:repeat-x;
 		}
 
 .button:hover	{
 		background-color:#FFCC00;
+		border-color:#182263;
 		color:#182263;
 		}
 
-.new:before	{
-		content:url(../images/new.png);
+.new		{
+		background-image:url("../images/new.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.old:before	{
-		content:url(../images/old.png);
+.old		{
+		background-image:url("../images/old.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.newex:before	{
-		content:url(../images/newex.png);
+.newex		{
+		background-image:url("../images/newex.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.oldex:before	{
-		content:url(../images/oldex.png);
+.oldex		{
+		background-image:url("../images/oldex.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.poll:before	{
-		content:url(../images/poll.png);
+.poll		{
+		background-image:url("../images/poll.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.closed:before	{
-		content:url(../images/locked.png);
+.closed		{
+		background-image:url("../images/locked.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.sticky:before	{
-		content:url(../images/sticky.png);
+.sticky		{
+		background-image:url("../images/sticky.png");
+		background-repeat:no-repeat;
+		width:30px;
+		height:30px;
+		display:block;
 		}
 
-.summary{
+.summary	{
 		position:absolute;
 		width:300px;
 		overflow:hidden;
 		margin:5px;
 		padding:2px;
-		background-image:url(../images/bg.png);
+		background-image:url("../images/bg.png");
 		background-repeat:repeat-x;
 		background-color:#FFCC00;
 		color:#182263;
 		border:solid 1px #182263;
+		z-index:10;
 		}
 
 #logo		{
-		float:left;
-		background-image:url(../images/logo.png);
+		position:absolute;
+		background-image:url("../images/logo.png");
 		background-repeat:no-repeat;
 		width:150px;
 		height:111px;
+		z-index:1;
 		}
 
+#logo:hover{cursor:pointer;}
+
 #title		{
-		padding-left:250px;
+		padding-left:200px;
 		padding-top:10px;
 		font-size:16px;
 		font-weight:bold;
 		}
 
 #welcome	{
-		padding-left:250px;
+		padding-left:200px;
 		padding-top:20px;
 		font-size:12px;
 		font-weight:bold;
 		}
 
 #menu		{
-		clear:left;
 		text-align:center;
 		margin:10px;
 		}
 
 #body		{
+		margin-top:30px;
 		text-align:center;
+		position:relative;
 		}
 
 #webring	{
 		text-align:center;
-		padding-top:50px;
+		padding-top:10px;
 		}
 
 .cat		{
@@ -238,7 +272,7 @@ table     	{
 		padding-bottom:2px;
 		padding-left:8px;
 		padding-right:8px;
-		background-image:url(../images/bg.png);
+		background-image:url("../images/bg.png");
 		background-repeat:repeat-x;
 		}
 
@@ -265,8 +299,7 @@ table     	{
 		margin-left:15px;
 		}
 
-.newthread:before{
-		content:"neu";
+.newthread{
 		background-color:#FFCC00;
 		color:#182263;
 		font-size:10px;
@@ -276,10 +309,10 @@ table     	{
 		padding-top:0px;
 		padding-bottom:0px;
 		margin-right:10px;
-		border-style:dotted;
-		border-color:#182263;
+		border-style:solid;
+		border-color:#6c83af;
 		border-width:1px;
-		background-image:url(../images/button.png);
+		background-image:url("../images/button.png");
 		background-repeat:repeat-x;
 		}
 
@@ -357,8 +390,10 @@ table     	{
 		border-width:1px;
 		border-color:black;
 		padding:5px;
+		margin:20px;
+		top:10px;
 		text-align:left;
-		width:480px;
+		width:600px;
 		}
 
 pre		{
@@ -390,6 +425,18 @@ input		{
 		border-color:#182263;
 		}
 
+input[type=radio]{
+		border-style:none;
+		}
+
+input[type=checkbox]{
+		border-style:none;
+		}
+
+input[type=file]{
+		border-style:none;
+		}
+
 textarea	{
 		font-family:sans-serif;
 		color:#002468;
@@ -411,6 +458,7 @@ select		{
 		}
 
 .avatar 	{
+		margin:20px;
 		max-width:60px;
 		max-height:60px;
 		}
@@ -437,65 +485,9 @@ select		{
 		border-color:#6c83af;
 		}
 
-
-.comment		{
-			color:#808080;
-			}
-
-.doc			{
-			color:blue;
-			}
-
-.doctag			{
-			color:green;
-			}
-
-.docfixme		{
-			color:red;
-			}
-
-.docparam		{
-			color:yellow;
-			}
-
-.escape			{
-			color:#0F0F8F;
-			}
-
-.variable		{
-			color:#5555FF;
-			}
-
-.string			{
-			color:#008000;
-			}
-
-.char			{
-			color:#00C000;
-			}
-
-.integer		{
-			color:#0000FF;
-			}
-
-.boolean		{
-			color:#800080;
-			}
-
-.tag			{
-			color:#0000C0;
-			}
-
-.keyword		{
-			color:#800000;
-			font-weight:bold;
-			}
-
-.operator		{
-			color:#00FF00;
-			}
-
-.function		{
-			color:#000080;
-			font-weight:bold;
-			}
+h1{font-size:20px;}
+h2{font-size:18px;}
+h3{font-size:16px;}
+h4{font-size:14px;}
+h5{font-size:12px;}
+h6{font-size:10px;}
