--- a/html/default.css
+++ b/html/default.css
@@ -401,6 +401,9 @@ pre		{
 		color:#000000;
 		font-size:12px;
 		background-color:#ffffff;
+		border-style:dashed;
+		border-width:1px;
+		border-color:black;
 		padding:5px;
 		overflow:auto;
 		width:80%;
